build: signup dummy page

--- a/projects/connected-dots/src/assets/i18n/en.json
+++ b/projects/connected-dots/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
   "iotfw.menu.login": "Sign in",
   "iotfw.menu.logout": "Logout",
   "iotfw.menu.settings": "Settings",
+  "iotfw.menu.signup": "Signup",
   "iotfw.settings.animations.elements": "Navigation page elements slide up",
   "iotfw.settings.animations.page": "Navigation whole page transition",
   "iotfw.settings.animations.title": "Animations",
